--- a/index.html
+++ b/index.html
@@ -143,11 +143,14 @@
                             <div class="content">xx:xx WClass sauna</div>
                             <div class="content">xx:xx zabehať si 3km</div>
                             </td>
-                        <tr><td class="row">Work
+                        <tr><td class="row">Productivity (Work)
                             <div class="content">12:00 Koupit VW</div>
                             <div class="content">14:00 otestovat Koupit VW</div>
                             <div class="content">14:05 poslat Kamilovy mail o Homeoffice dnes</div>
                             <div class="content">14:05 poslat Davidovy mail o vyplate</div>
+                            </td></tr>
+                        <tr><td class="row">Productivity (Education:Web App)
+                            <div class="content done">10:15 Upravil index.html v test6 [1h]</div>
                             </td></tr>
                         <tr><td class="row">Money
                             <div class="content">xx:xx + 11200 CZK Salary July</div>
