--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
                             </td></tr>
                         <tr><td class="row">Productivity (Education:Web App)
                             <div class="content done">10:15 Upravil index.html v test6 [1h]</div>
+                            <div class="content">xx:xx opraviť Sticky Header</div>
+                           
                             </td></tr>
                         <tr><td class="row">Money
                             <div class="content">xx:xx + 11200 CZK Salary July</div>
