text color set to gray
applied gray text color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 display: block;
                 background: white;
                 max-width: 900px;
-                max-height: 500px;
+                max-height: 900px;
                 overflow: auto;
                 margin: auto;
                 padding:0px;
@@ -61,6 +61,7 @@
             }
             .content {
                 display: block;
+                color: grey;
                 background: #f6f7f9;
                 max-height: 100px;
                 text-indent: 3px;
