repaired today.html
corrected list, instead of using li element I will use <p></p>

--- a/today.html
+++ b/today.html
@@ -109,7 +109,7 @@
                 border-radius: 3px;
             }
             .list {
-                margin-left: 17px;
+                margin-left: 10px;
                 line-height: 0px;
                 list-style: disc;
                 padding-bottom: 8px;
@@ -152,9 +152,9 @@
                     <i class="material-icons undone">work</i>
                     <div class="time" style="margin-top: -px">00:13<br></div>
                     <div class="content undone" style="margin-top: -px">created today.html and timeline.html
-                        <div class="list">
-                            <li>uploaded on</li>
-                            <li>uploaded on</li>
+                        <div >
+                            <p class="list">- uploaded on 17.7.2016</p>
+                            <p class="list">- created page "today.html" on</p>
                         </div>
                     </div>
                 </li>
